<resources>
    <string name="app_name">DefiLecture</string>
    <string name="ic_equipage">Équipage</string>
    <string name="ic_ajouter">Ajouter</string>
    <string name="ic_tresorerie">Trésorerie</string>
    <string name="ic_epreuve">Épreuve</string>
    <string name="compte">Compte</string>
    <string name="defilecture">Défi Lecture</string>
    <string name="AjouterLecture">Ajouter une lecture</string>
    <string name="paramètre">Paramètres</string>
    <string name="langue">Langue</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Supprimer">supprimer</string>
    <string name="ajouter_une_lecture_minuscule">Ajouter une lecture</string>
    <string name="bg_opacite">bg_opacite</string>
    <string name="btnReinitialiser">Réinitialiser</string>
    <string name="minutes_pluriel">J\'ai lu %1$d minutes.</string>
    <string name="minutes_singulier">Veuillez s\'il vous plaît entrer le nombre de minutes lues.</string>
    <string name="jaicompris">Arghh! J\'ai compris</string>
    <string name="avertissement">Oops…</string>
    <string name="titreManquant">Veuillez s\'il vous plaît spécifier le titre de votre lecture.</string>
    <string name="tempsManquant">Veuillez s\'il vous plait spécifier votre temps de lecture.</string>
    <string name="obligationManquant">Veuiller s\'il vous plait nous dire si votre lecture était obligatoire.</string>
    <string name="TitrePageObligationLecture">Votre lecture a-t-elle été réalisée dans le cadre d’un cours ?</string>
    <string name="descriptionLectureVALT">Une lecture libre est un ouvrage littéraire, incluant les essais et les article scientifiues, mais exclu les journaux et les médias sociaux.</string>
    <string name="nbMinute">%1$d min</string>
    <string name="titre_du_roman">Titre du roman</string>
    <string name="obligatoire">DEVOIR</string>
    <string name="libre">LIBRE</string>
    <string name="mot_de_passse">Mot de passse</string>
    <string name="PrenomCompteUtilisateur">Prénom: %1$s</string>
    <string name="NomCompteUtilisateur">Nom: %1$s</string>
    <string name="CourrielCompteUtilisateur">Courriel: %1$s</string>
    <string name="ProgrammeCompteUtilisateur">Programme: %1$s</string>
    <string name="PrenomCompteTemporaire">Prénom: %1$s</string>
    <string name="NomCompteTemporaire">Nom: %1$s</string>
    <string name="CourrielCompteTemporaire">Courriel: %1$s</string>
    <string name="ProgrammeCompteTemporaire">Programme: %1$s</string>
    <string name="IndicePrenomInscription">Prénom</string>
    <string name="IndicePseudonymeInscription">Pseudonyme</string>
    <string name="IndiceNomInscription">Nom</string>
    <string name="IndiceProgrammeJoueur">Programme</string>
    <string name="IndiceCourrielInscription">Courriel</string>
    <string name="IndiceMotDePasseInscription">Mot De Passe</string>
    <string name="IndiceMotDePasseConfirmationInscription">Confirmation Mot De Passe</string>
    <string name="mesLectures">Mes lectures</string>
    <string name="TitreLangue">Changer la langue</string>
    <string name="buttonLangueFrancaise" translatable="false">Français</string>
    <string name="buttonLangueEnglish" translatable="false">English</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="TitreModification">Modification</string>
    <string name="titre">Titre</string>
    <string name="temps">Temps</string>
    <string name="obligationLabel">Obligation</string>
    <string name="combien_de_temps_avez_vous_lu">Combien de temps avez-vous lu ?</string>
    <string name="suivant">Suivant</string>
    <string name="quel_est_le_nom_de_votre_lecture">Quel est le nom de votre lecture ?</string>
    <string name="Glossaire">Glossaire</string>
    <string name="plus_d_informations">Plus d\'informations :</string>
    <string name="entrer_le_titre_de_votre_lecture">Entrer le titre de votre lecture</string>
    <string name="terminer">Terminer</string>
    <string name="lectureAjoute">Lecture ajouté !</string>
    <string name="connexion">Connexion</string>
    <string name="erreurInternet">Erreur d\'accès aux données. Veuillez vérifier votre connexion à Internet !!!</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="TitreConnexion">Connexion</string>
    <string name="Alabordage">À l\'abordage !</string>
    <string name="Motdepasseoublié">Mot de passe oublié ?</string>
    <string name="Inscription">S\'inscrire</string>
    <string name="Apropos">À propos</string>
    <string name="message_accueil">Tous les flibustiers, à bord de leur fier vaisseau, se livreront un combat féroce pour obtenir le plus de doublons et ainsi damer le pion à leurs adversaires.</string>
    <string name="Trésorerie">Trésorerie</string>
    <string name="Contributeurs">Contributeurs</string>
</resources>