<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_ajouter"
        android:icon="@drawable/plus_svgrepo_com"
        android:title="@string/ic_ajouter"
        />
    <item
        android:id="@+id/ic_equipage"
        android:icon="@drawable/team_svgrepo_com"
        android:title="@string/ic_equipage"
        />
    <item
        android:id="@+id/ic_tresorerie"
        android:icon="@drawable/locked_chest_svgrepo_com"
        android:title="@string/ic_tresorerie"
        />
    <item
        android:id="@+id/ic_epreuve"
        android:icon="@drawable/puzzle_svgrepo_com"
        android:title="@string/ic_epreuve"
        />
    <item
        android:id="@+id/ic_compte"
        android:icon="@drawable/account_box_svgrepo_com"
        android:title="@string/compte"
        />



</menu>