<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".présentation.modifier.VueModifier"
    android:background="@drawable/bg_poste"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_titre_equipage"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/TitreModification"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tvProgramme"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:text="@string/IndiceProgrammeJoueur"
            android:textAlignment="textStart"
            android:textColorHint="#50000000"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPseudonyme" />

        <EditText
            android:id="@+id/tvPrenom"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:text="@string/IndicePrenomInscription"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textColorHint="#50000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/tvNom"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:text="@string/IndiceNomInscription"
            android:textAlignment="textStart"
            android:textColorHint="#50000000"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrenom" />

        <EditText
            android:id="@+id/tvCourriel"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:text="@string/IndiceCourrielInscription"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#50000000"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNom" />

        <EditText
            android:id="@+id/tvPseudonyme"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:text="@string/IndicePseudonymeInscription"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#50000000"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCourriel" />

        <Button
            android:id="@+id/btnModifier"
            android:layout_width="325dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:padding="5dp"
            android:text="@string/Enregistrer"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:cornerRadius="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProgramme" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>