<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sophie_louisnard_bg_unsplash"
    tools:context=".présentation.ajouterlecture.obligation.VueAjouterLectureObligation">

    <ImageView
        android:id="@+id/opacity_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_opacite"
        tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/bg_ajouterLectureTitre2"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/bg_ajouter_lecture"
            android:contentDescription="@string/bg_opacite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/opacity_bg"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/renduAuTitre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:text="@string/titre"
            android:textColor="@color/df_rougeprimaire"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_ajouterLectureTitre2" />

        <ImageView
            android:id="@+id/barreRenduAuTitre2"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/barre_rouge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/renduAuTitre2" />

        <TextView
            android:id="@+id/renduAuTemps2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:text="@string/temps"
            android:textColor="@color/df_rougeprimaire"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_ajouterLectureTitre2" />

        <ImageView
            android:id="@+id/barreRenduAuTemps2"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/barre_rouge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/renduAuTemps2" />

        <TextView
            android:id="@+id/renduAuObligation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:text="@string/obligationLabel"
            android:textColor="@color/df_rougeprimaire"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_ajouterLectureTitre2" />

        <ImageView
            android:id="@+id/barreRenduAObligation2"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/barre_rouge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/renduAuObligation2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="301dp"
            android:layout_height="290dp"
            android:backgroundTint="@color/saumon"
            android:padding="30dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_ajouterLectureTitre2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_ajouterLectureTitre2"
            app:layout_constraintVertical_bias="0.29000002">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardViewObligation"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textviewObligation"
                    android:layout_width="232dp"
                    android:layout_height="124dp"
                    android:fontFamily="@font/goudy_bookletter1911_regular"
                    android:gravity="center"
                    android:text="@string/TitrePageObligationLecture"
                    android:textColor="#000000"
                    android:textSize="27sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.2" />

                <RadioGroup
                    android:id="@+id/rg_VALO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textviewObligation">

                    <RadioButton
                        android:id="@+id/rb_option_oui"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_custom_radio_btn"
                        android:button="@null"
                        android:fontFamily="@font/goudy_bookletter1911_regular"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="10dp"
                        android:text="@string/oui"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rb_option_non"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/bg_custom_radio_btn"
                        android:button="@null"
                        android:fontFamily="@font/goudy_bookletter1911_regular"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="10dp"
                        android:text="@string/non"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnTerminerVersMesLectures"
            android:layout_width="303dp"
            android:layout_height="73dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/goudy_bookletter1911_regular"
            android:padding="5dp"
            android:text="@string/terminer"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:cornerRadius="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.17" />


</androidx.constraintlayout.widget.ConstraintLayout>